fix button safari behavior

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1361,6 +1361,7 @@ a.c-btn {
   align-items: center;
   font-family: var(--text-font);
   padding: .5rem .75rem;
+  margin: 0;
   border-radius: 0 var(--border-radius) var(--border-radius) 0;
   font-weight: 500;
   gap: .75rem; }
