--- a/src/assets/scss/components/alert.scss
+++ b/src/assets/scss/components/alert.scss
@@ -124,6 +124,7 @@
     align-items: center;
     font-family: var(--text-font);
     padding: .5rem .75rem;
+    margin: 0;
     border-radius: 0 var(--border-radius) var(--border-radius) 0;
     font-weight: 500;
     gap: .75rem;
